--- a/frontend/style.css
+++ b/frontend/style.css
@@ -77,3 +77,11 @@ button:hover {
     text-align: right;
     margin-top: 10px;
 }
+.card-link {
+  display: block;
+  color: inherit;
+  text-decoration: none;
+}
+.card-link:hover {
+  text-decoration: none;
+}
